Fixed version tag on mobile

--- a/stylesheets/all.sass
+++ b/stylesheets/all.sass
@@ -116,7 +116,8 @@ p > code, li > code
     a
       color: darken($color-main, 80%)
 
-  .version
+  .version span
+    display: inline-block
     margin-top: 2px
     padding: 1px 6px
     background-color: lighten($color-main, 10%)
